WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229486
[iOS 15] editing/input/cocoa/autocorrect-on.html times out when run after editing/input/cocoa/autocorrect-off.html
https://bugs.webkit.org/show_bug.cgi?id=229486
Summary
[iOS 15] editing/input/cocoa/autocorrect-on.html times out when run after edi...
Wenson Hsieh
Reported
2021-08-24 18:31:15 PDT
rdar://82191308
Attachments
Patch
(7.35 KB, patch)
2021-08-24 18:57 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-08-24 18:57:59 PDT
Created
attachment 436362
[details]
Patch
Tim Horton
Comment 2
2021-08-25 12:30:12 PDT
Comment on
attachment 436362
[details]
Patch Nasty, I love it.
Wenson Hsieh
Comment 3
2021-08-25 12:31:19 PDT
Comment on
attachment 436362
[details]
Patch (In reply to Tim Horton from
comment #2
)
> Comment on
attachment 436362
[details]
> Patch > > Nasty, I love it.
😈
EWS
Comment 4
2021-08-25 12:59:46 PDT
Committed
r281576
(
240940@main
): <
https://commits.webkit.org/240940@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 436362
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug