Source/WebKit/Platform/spi/ios/TextInputSPI.h
@@ -27,10 +27,18 @@
 
 #if USE(APPLE_INTERNAL_SDK)
 
+#import <TextInput/TIKeyboardCandidate.h>
+#import <TextInput/TIKeyboardInput.h>
 #import <TextInput/TIPreferencesController.h>
 #import <TextInput/TI_NSStringExtras.h>
 
 #else
+
+@interface TIKeyboardCandidate : NSObject <NSCopying, NSSecureCoding>
+@end
+
+@interface TIKeyboardInput : NSObject <NSSecureCoding>
+@end
 
 @protocol TIPreferencesControllerActions <NSObject>
 - (BOOL)oneTimeActionCompleted:(NSString *)actionKey;
